--- a/style.css
+++ b/style.css
@@ -1,55 +1,39 @@
-h1{
-	text-align: center;
+*{
+	box-sizing: border-box;
 }
 
-#game-board{
-	display: flex;
-	align-items: center;
-	flex-direction: column;
-}
-
-.letter-row{
-	display: flex;
-}
-
-.letter-box{
-	border: 2px solid gray;
-	border-radius: 3px;
-	margin: 2px;
-	font-size: 2.5rem;
-	font-weight: 700;
-	height: 3rem;
-	width: 3rem;
+body{
+	margin: 0;
+	padding: 0;width: 100%;
+	height: 100vh;
+	overflow: hidden;
+	background: #2d3436;
 	display: flex;
 	justify-content: center;
 	align-items: center;
-	text-transform: uppercase;
 }
 
-.filled-box{
-	border: 3px solid black;
+.cloud-svg{
+	width: 18rem;
+	height: 18rem;
+	position: fixed;
+	top: 120px;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	z-index: 10;
 }
 
-#keyboard-cont{
-	margin: 1rem 0;
-	display: flex;
-	flex-direction: column;
-	align-items: center;
+.cloud{
+	fill: #2ecc71;
+	stroke: #27ae60;
+	stroke-width: 2px;
+	stroke-linecap: round;
+	stroke-miterlimit: 10;
 }
 
-#keyboard-cont div{
-	display: flex;
-}
-
-.second-row{
-	margin: 0.5rem;
-}
-
-.keyboard-button{
-	font-size: 1rem;
-	font-weight: 700;
-	padding: 0.5rem;
-	margin: 0 2px;
-	cursor: pointer;
-	text-transform: uppercase;
+canvas{
+	position: fixed;
+	top: 350px;
+	left: 50%;
+	transform: translate(-50%, -50%);
 }
